tests/org.eclipse.php.core.tests/workspace/errors/php54/invalidMethodModifiers.pdtt
--TEST--
Test invalid modifiers reporting
--FILE--
<?php
class A {
    public private function accessModifiers() {}
    abstract abstract public function abstractMethod() {}
    static static public function multiStatic() {}
    abstract final function invalidFinal1() {}
    final abstract function invalidFinal2() {}
    
}
?>
--EXPECT--
[line=3, start=20, end=34] Multiple access type modifiers are not allowed
[line=4, start=69, end=93] Multiple abstract modifiers are not allowed
[line=5, start=12, end=13] The type A must be an abstract class to define abstract methods
[line=5, start=103, end=117] Abstract methods do not specify a body
[line=5, start=103, end=117] The abstract method abstractMethod in type A can only be defined by an abstract class
[line=5, start=127, end=147] Multiple static modifiers are not allowed
[line=6, start=178, end=192] Cannot use the final modifier on an abstract class member
[line=7, start=12, end=13] The type A must be an abstract class to define abstract methods
[line=7, start=202, end=215] Abstract methods do not specify a body
[line=7, start=202, end=215] The abstract method invalidFinal1 in type A can only be defined by an abstract class
[line=7, start=225, end=239] Cannot use the final modifier on an abstract class member
[line=9, start=12, end=13] The type A must be an abstract class to define abstract methods
[line=9, start=249, end=262] Abstract methods do not specify a body
[line=9, start=249, end=262] The abstract method invalidFinal2 in type A can only be defined by an abstract class